<resources>

    <string name="app_name">蒲公英应用吧</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="group_1">系统工具</string>
    <string name="group_2">休闲益智</string>
    <string name="group_3">模拟策略</string>
    <string name="group_4">动作竞技</string>
    <string name="group_5">社交聊天</string>
    <string name="group_6">网络工具</string>
    <string name="group_7">网购支付</string>
    <string name="group_8">阅读新知</string>
    <string name="group_9">喜闻乐见</string>
    <string name="group_10">交通旅行</string>
    <string name="group_11">艺术人生</string>
    <string name="group_12">教育医疗</string>
    <string name="group_13">吃喝玩乐</string>
    <string name="group_14">同城生活</string>
    <string name="group_15">事业理财</string>
    <string name="group_16">五花八门</string>
    <string name="btn_cancel">停止</string>
    <string name="btn_submit">确认</string><string name="btn_download">下载</string>
    <string name="btn_share">分享</string><string name="btn_back">返回</string><string name="btn_comment">评论</string><string name="app_downloading">应用程序下载中……</string>
    <string name="background_download">秒中之后进入后台下载！</string>
    <string name="notify_newversion">安装最新版本：</string>
    
    
    <string name="wlanonline">WiFi下载</string>
    <string name="dataonline">WiFi/移动数据</string>
    <string name="moreserviceforyou">More For You</string>
    <string name="servicenumber">400-688-4358</string>
    <string name="nostorage">请插入存储卡!</string>
    <string name="waiting_datainit">网络数据初始化….</string>
    <string name="check_connection_storage">请确保数据连接与存储空间有效！</string>
    <string name="widget_boot">夏朗手机  智慧生活</string>
    
    
    <string name="share_title">蒲公英应用分享</string>
    <string name="share_via">我通过</string>
    <string name="share_app">与您分享一个很棒的应用</string>
    <string name="share_intent">选择分享方式</string>
    <string name="share_go">一起来体验吧！</string>
    <string name="btn_install">安装</string>
    <string name="btn_upgrade">升级</string>
    <string name="btn_launch"> 运行</string>

</resources>